more support for shape building, table support, etc.